#   Cryptography. Security.
#
# fleaTLS cryptographic library for embedded systems
# Copyright (C) 2015-2018 cryptosource GmbH
#
# Changelog of the fleaTLS cryptographic library
# http://keepachangelog.com/en/1.0.0/

## [ XXX ] unreleased

### Fixed
- fixed ECDSA signature encoding bug when using secp160r1 (order bit length = 161)
with hash algorithm with more than 160 bits output

### Added
- C-file based read stream

### Changed
- removed version number from built library file

## [1.2.1] 2018-03-27 cryptosource GmbH  info@fleatls.com

### Fixed
- fixed fleaTLS version number in build system
- fixed theoretical off-by-one error in ANSI X9.62 encoding (cannot be triggered
by currently supported curves)

## [1.2.0] 2018-03-21 cryptosource GmbH  info@fleatls.com

### Added
- added ECDSA ciphersuites for TLS
- added the CPT default test suite for the X.509 functionility 

### Removed 
- pubkey/privkey API: sign and verfiy function "..._plain_format". Choice of 
signature format for ECDSA (concatentation of r and s vs. ASN.1/DER encoded
signature) is now controlled via the public key scheme variable.

### Fixed
- corrected maximal allowed value in API documentation of build variable FLEA_TLS_ALT_SEND_BUF_SIZE
- fixed an error in the unit test code in function THR_flea_test_cbc_mode_3des() for
certain build configurations
- fixed an error in ECDSA signature decoding in TLS certificate chains
- fixed error in EC curve OID resolving
- fixed build error that occurred when disabling mutex usage in build
configuration
- fixed some minor functional bugs regarding TLS signature algorithm and hash algorithm
negotiation
- fixed ECDSA signature encoding when hash value is longer than base point order


## [1.1.0] 2018-01-23  cryptosource GmbH  info@fleatls.com

### Added
- X.509 and CRL processing
- GCM mode
- TLS 1.2
- Public and private key types
- Side channel countermeasures
- RNG functionality

### Changed
- Public Key Operations API
- Library Initialization function